css/master.css
@import url("http://fonts.googleapis.com/css?family=Montserrat:400,500,700");
@import url("./normalize.css");

@font-face {
  font-family: 'Montserrat', sans-serif;
  font-size: 1em;
}

html, body {
  scroll-behavior: smooth;
  width: 100%;
}

::selection {
  background: #313D6C;
  color: white;
}

a:visited, a {
  color: #313D6C;
}

body {
  font-family: 'Montserrat', sans-serif;
  color: #313D6C;
  font-size: 1em;
}

.nav-bar {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  padding: 0 15px;
  background-color: white;
  height: 70px;
  z-index: 1;
  border-bottom: 2px solid #313D6C;
}

.nav-bar h1, .nav-bar i {
  line-height: 70px;
  font-size: 1.5rem;
}

.nav-bar h1, #burger {
  display: inline;
}

.nav-bar i {
  float: right;
}

.nav-bar a {
  text-decoration: none;
}

#cross {
  display: none;
}

#menulist {
  height: 0;
  width: 100vw;
  background-color: white;
  position: absolute;
  /* display: none; */
  z-index: 0;
  transition-duration: .5s;
  transition-property: height;
  padding-top: 70px;
  text-align: center;
  overflow: hidden;
  line-height: 3rem;
}

.container {
  margin: 0 auto;
  padding: 0 15px;
  min-height: 90vh;
}

.row {
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  grid-column-gap: 30px;
  z-index: 99;
}

.row:nth-child(n+4) {
  margin-top: 60px;
}

.plants-home {
  /* display: block; */
  position: absolute;
  width: 100%;
  height: 100vh;
  overflow: hidden;
  padding-bottom: 250px;
  z-index: -2;
}

.plants-home img {
  margin-bottom: 250px;
  position: absolute;
  height: 400px;
}

.plants-home img:first-child {
  transform: rotate(46deg);
  bottom: 150px;
  left: -120px;
  z-index: -4;
}

.plants-home img:nth-child(2) {
  transform: rotate(46deg);
  bottom: 30px;
  left: -50px;
  z-index: -3;
}

.plants-home img:nth-child(3) {
  transform: rotate(60deg);
  bottom: -200px;
  left: -10px;
  z-index: -1;
}

.plants-home img:nth-child(4) {
  height: 300px;
  transform: rotate(60deg);
  bottom: 0;
  left: -30px;
  z-index: -2;
}

.plants-home img:nth-child(5) {
  height: 300px;
  transform: rotate(-70deg) scaleX(-1);
  bottom: 200px;
  right: -80px;
  z-index: -3;
}

.plants-home img:nth-child(6) {
  transform: rotate(-60deg) scaleX(-1);
  bottom: 0px;
  right: -70px;
  z-index: -2;
}

.plants-home img:nth-child(7) {
  transform: rotate(-75deg) scaleX(-1);
  bottom: -120px;
  right: -50px;
  z-index: -1;
}

#homejumbo {
  height: 100vh;
}

#logoheader {
  width: 100%;
}

#introtext, #intrologo {
  display: flex;
  justify-content: center;
  align-content: center;
  flex-direction: column;
  flex-flow: column;
  height: 100%;
  font-size: 1.5rem;
}

.about p {
  margin-bottom: 0;
}

.we-do {
  margin-top: 60px;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(5rem, 20%));
  text-align: center;
}

.we-do img {
  width: 40%;
}

.we-do p {
  margin-top: 0;
}

.work-grids {
  display: grid;
  height: auto;
  grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
  text-align: center;
}

.work-grids>*:first-child {
  grid-row: 1 / 1;
  grid-column: 1 / 1;
}

.work-entry {
  position: relative;
  text-align: center;
  padding-bottom: 100%;
}

.work-grids a>div {
  background-size: cover;
}

.work-grids a>div:hover>* {
  opacity: 0;
}

#entry1 {
  background-image: url("../images/project1/thumb.jpg");
}

#entry2 {
  background-image: url("../images/project2/thumb.jpg");
}

#entry3 {
  background-image: url("../images/project3/sign.jpg");
}

#entry4 {
  background-image: url("../images/project4/thumb.jpg");
}

#entry5 {
  background-image: url("../images/project5/solar.gif");
}

.overlay {
  background-color: #313D6Ccc;
  position: absolute;
  width: 100%;
  height: 100%;
  transition-duration: .5s;
}

.entry-content {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  text-align: center;
  width: 100%;
  transition-duration: .3s;
}

.entry-content h1 {
  color: white;
  font-weight: 700;
  text-align: center;
}

#linkphones {
  display: none;
}

label {
  display: block;
  font-weight: bold;
}

input {
  height: 34px;
  padding: 2px;
}

input, textarea {
  background-color: #ffffffaa;
  border-radius: 3px;
  border: 1px solid #313D6C;
  margin-bottom: 15px;
}

textarea {
  width: 50%;
  resize: none;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
}

#mockup {
  width: 300px;
}

#send-button {
  cursor: pointer;
  background-color: #313D6C;
  color: white;
  width: 100px;
  height: 50px;
}

.polaroids {
  border-radius: 5px;
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}

.polaroidcaption h2 {
  margin: 0;
}

#meetteam img {
  width: 100%;
  object-fit: contain;
  border: 15px white solid;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
}

.polaroidcaption {
  padding: 0 15px;
}

#contactform {
  margin-bottom: 30px;
}

#contact p {
  font-size: 1.4rem;
  line-height: 2.5rem;
  margin: 0;
}

#contact a {
  font-size: 1.4rem;
  line-height: 2.5rem;
}

footer {
  grid-column: content-start / content-end;
  height: 10vh;
  background-color: #313D6C;
  color: white;
  line-height: 10vh !important;
  text-align: center;
}

footer>p {
  line-height: 10vh;
}

footer p {
  margin: 0;
}

/* PORTFOLIO STUFFS */
#menu-desktop {
  height: 70px;
  line-height: 70px;
}

#menu-desktop a {
  text-decoration: none;
}

#menu-desktop h1 {
  margin: 0;
  font-size: 1.5rem;
}

#menu-desktop-links {
  text-align: right;
}

#menu-desktop-links a {
  margin: 0 30px;
  font-weight: bold;
}

.project-info {
  margin-top: 2rem;
}

.project-info h2 {
  font-weight: normal;
}

.taglist {
  padding: 0 !important;
  margin-top: 0;
}

.keytags {
  color: #313D6C;
  border-radius: .2rem;
  border: 1px solid #313D6C;
  font-size: 1rem;
  overflow-wrap: break-word;
  word-wrap: break-word;
  padding: .1rem .3rem .2rem;
  box-sizing: border-box;
}
/* ... */

